# MergeMate

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: config.instructions.md  interfaces.instructions.md  tests.instructions.md
.github/workflows/: pr-checks.yml  publish-pypi.yml
.hermes/: workflow-rules.md
.hermes/reviews/: comprehensive-review-2026-05-10.md  deep-review-2026-05-10.md
config/: config.yaml
docs/: user-guide.md
docs/architecture/: 01-structured-memory-extraction.md  01-system-overview.md  02-repo-knowledge-base.md  02-runtime-architecture.md  03-async-job-lifecycle.md  03-workflow-grouped-memory.md  04-configuration-model.md  05-plugin-tool-architecture.md  06-packaging-and-distribution.md  07-data-model.md  08-security-and-sandboxing.md  09-operations-and-observability.md  10-evolution-roadmap.md  architecture-review-2026-05-10.md  di-refactoring.md  document-kind-dispatch.md  dynamic-progress-estimation.md  feature-gaps-cli-resume-search.md  integration-test-async-pipeline.md  llm-gateway-retry.md  models-split-arch.md  provider-compatibility-expansion.md  redis-queue-adapter.md  repository-async-migration.md  runtime-sub-contexts.md  service-protocols.md  stage-descriptor-cull.md  tool-registry-builder.md  workflow-service-protocol-evaluation.md
docs/architecture/adr/: ADR-001-python-modular-monolith.md  ADR-002-local-yaml-config.md  ADR-003-non-blocking-telegram-jobs.md  ADR-004-provider-abstraction.md  fast-track-bypass.md  (+8 more)
docs/diagrams/: container-view.mmd  index.md  sequence-message-flow.mmd  system-context.mmd
docs/implementation/: 01-structured-memory-extraction.md  02-repo-knowledge-base.md  bootstrap-entry-point-discovery.md  cli-interactive-mode.md  config-domain-inversion.md  document-kind-dispatch.md  handler-context-protocol.md  llm-gateway-retry.md  policies-live-query.md  runtime-sub-contexts.md  service-protocols.md  soul-dashboard-plugin.md  stage-validation-hook-key.md  tool-registry-builder.md  validation-hook-module.md  workflow-registry.md
docs/lessons/: experience.md  git-conflict-resolution.md  index.md  pitfalls.md
docs/operations/: production-deployment.md  repository-maintenance.md  webhook-deployment.md
docs/product/: mvp-scope.md  non-functional-requirements.md
docs/review/: review-memory-improvements-2026-05-10.md
docs/testing/: 03-workflow-grouped-memory-test-report.md  additional-branch-coverage-test-plan.md  p8-exceptions-migration-and-property-testing.md  test_report_bootstrap_error_paths.md
scripts/: dev.sh  run_bot.sh  seed_prompts.sh  setup_venv.sh
src/mergemate/: __init__.py  bootstrap.py  cli.py  main.py  py.typed
tests/: conftest.py
tests/property/: test_agent_run_invariants.py  test_soul_permissions_invariants.py
tests/unit/: test_config_loader.py
(+171 files in other folders)
