[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergemate"
version = "0.1.0"
description = "AI-powered Telegram code-generation agent with background job orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "MergeMate Contributors" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Communications :: Chat :: Telegram",
]
keywords = ["telegram", "ai-agent", "code-generation", "workflow", "orchestration"]
dependencies = [
  "python-telegram-bot>=22.0,<23.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "SQLAlchemy>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "structlog>=24.0,<25.0",
  "typer>=0.12,<1.0",
]

[project.urls]
Homepage = "https://github.com/djwinter29-oss/MergeMate"
Source = "https://github.com/djwinter29-oss/MergeMate"
Documentation = "https://github.com/djwinter29-oss/MergeMate/tree/main/docs"
Issues = "https://github.com/djwinter29-oss/MergeMate/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.5,<4.0",
]

[project.scripts]
mergemate = "mergemate.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
packages = ["mergemate"]
strict = false